new styling edits 329 547pm

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   color: white;
   font-size: 20px;
   text-decoration: overline;
-  background-image: url("https://i.imgur.com/iHsIAoD.jpg");
+  background-image: url("https://i.imgur.com/4zylD0A.jpg");
   max-width:100%;
   padding-top: 25px;
   padding: 40px;
@@ -67,7 +67,7 @@
 
 
 .landing{
-  background-image: url("https://i.imgur.com/o2D9x01.jpg");
+  background-image: url("https://i.imgur.com/wMptasg.jpg");
   color: white;
   text-align: center;
   font-family: monospace;
